# robotics_arm_moveit

./: .dockerignore  .gitignore  Dockerfile  INSTALL_MOVEIT.md  MOVEIT_TECHNICAL_GUIDE.md  README.md  compress_video.py  docker-compose.yml
workspace/src/: find_and_stop_joint_state_publisher.sh  find_joint_states_publishers.sh  moveit_advanced_demo.py  run_named_poses.py  stop_joint_state_publisher.sh
workspace/src/moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
workspace/src/moveit_config/config/: 2dof_arm.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml  sensors_3d.yaml
workspace/src/moveit_config/launch/: demo.launch.py  move_group.launch.py
workspace/src/robot_description/: CMakeLists.txt  package.xml
workspace/src/robot_description/launch/: display.launch.py
workspace/src/robot_description/urdf/: arm.xacro
